@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-28T08:10:34Z",
-  "count_outdated" : 993,
-  "uniques_outdated" : 59,
+  "timestamp" : "2022-04-29T16:10:04Z",
+  "count_outdated" : 1004,
+  "uniques_outdated" : 60,
   "count" : 1050,
   "uniques" : 67,
   "views" : [
-    {
-      "timestamp": "2022-04-15T00:00:00Z",
-      "count": 11,
-      "count_minmax": [ 0, 11 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
-    },
     {
       "timestamp": "2022-04-16T00:00:00Z",
       "count": 15,
