@@ -1,12 +1,7 @@
 {
-  "count": 57,
+  "count": 46,
   "uniques": 2,
   "views": [
-    {
-      "timestamp": "2022-04-15T00:00:00Z",
-      "count": 11,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-04-16T00:00:00Z",
       "count": 15,
