@@ -1,3 +1,9 @@
+2022-04-29T16:10:04Z:
+* notice: last 14d: all unq: 46 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 993 59 / 1050 67
+* notice: next accum: outdated-all outdated-unq / all unq: 1004 60 / 1050 67
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -0 -0
+
 2022-04-28T08:10:34Z:
 * notice: last 14d: all unq: 57 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 984 58 / 1050 67
